--- a/index.html
+++ b/index.html
@@ -7,23 +7,21 @@
         <title>Tic Tac Toe</title>
     </head>
     <body>
-        <div class="calculator-container">
-            <div class="input-container">
-                <input
-                    type="number"
-                    id="num-one"
-                    class="input-number"
-                    placeholder="Enter first number"
-                />
-                <input
-                    type="number"
-                    id="num-two"
-                    class="input-number"
-                    placeholder="Enter second number"
-                />
+        <div class="container">
+            <header class="heading"><h1>Tic Tac Toe</h1></header>
+            <h2 class="player">Player1</h2>
+            <div class="boxContainer">
+                <div class="box box0"></div>
+                <div class="box box1"></div>
+                <div class="box box2"></div>
+                <div class="box box3"></div>
+                <div class="box box4"></div>
+                <div class="box box5"></div>
+                <div class="box box6"></div>
+                <div class="box box7"></div>
+                <div class="box box8"></div>
             </div>
-            <button type="button" id="sum" class="sum-button">Sum</button>
-            <div id="output" class="output"></div>
+            <button class="btn">Reset</button>
         </div>
         <script type="module" src="./src/init.js"></script>
     </body>
